--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -7,6 +7,7 @@
   },
   "ConnectionStrings": {
     "DefaultConnection": "Data source=skinet.db"
+      "Redis": "localhost"
   },
-  "ApiUrl": "http://localhost:5001/"
+  "ApiUrl": "https://localhost:5001/"
 }
