Revert "Setting up Redis"
This reverts commit d286f60024847917de51d2d7279fd662a03b8508.

--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -7,7 +7,6 @@
   },
   "ConnectionStrings": {
     "DefaultConnection": "Data source=skinet.db"
-      "Redis": "localhost"
   },
-  "ApiUrl": "https://localhost:5001/"
+  "ApiUrl": "http://localhost:5001/"
 }
