--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -7,7 +7,8 @@
   },
   "ConnectionStrings": {
     "DefaultConnection": "Data source=skinet.db",
-      "Redis": "localhost"
+    "IdentityConnection": "Data source=identity.db",
+    "Redis": "localhost"
   },
   "ApiUrl": "http://localhost:5001/"
 }
