--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -10,5 +10,9 @@
     "IdentityConnection": "Data source=identity.db",
     "Redis": "localhost"
   },
+  "Token": {
+    "Key": "super secret key",
+    "Issuer": "https://localhost:5001"
+  }
   "ApiUrl": "http://localhost:5001/"
 }
