Testing the token

--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -11,8 +11,8 @@
     "Redis": "localhost"
   },
   "Token": {
-    "Key": "super secret key",
+    "Key": "this is my custom super secret key signin method / this is my custom super secret key signin method",
     "Issuer": "https://localhost:5001"
-  }
-  "ApiUrl": "http://localhost:5001/"
+  },
+  "ApiUrl": "https://localhost:5001/"
 }
